# opptimizer

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  HOW-TO-BUILD.txt  README.md  config.sh  general.cfg  install.sh  mkdocs.yml  opp  opp.cfg  pyproject.toml  run.sh  runscript.py  version.txt
doc/: optimizer-user-guide.doc
docs/: advanced-installation.md  context-management.md  contributing.md  dirs-management.md  examples.md  exec-modes.md  exec-params.md  faq.md  index.md  installation.md  reference.md  release-notes.md  results.md  usage.md
ext/cpp/: Makefile
ext/cpp/inc/: pcommon.h  plog.h  pservice.h  putils.h
ext/cpp/src/: plog.cpp  pservice.cpp  putils.cpp
make/: config.mk
opptimizer/: .readthedocs.yaml  Executor.py  Mod.py  PExecutable.py  PExecutor.py  PLog.py  PModule.py  PModulePy.py  PObject.py  PPath.py  PResult.py  PScript.py  PSplitModule.py  PTest.py  Token.py  __about__.py  __init__.py  opp.py  pcons.py  pmodutils.py  putils.py
templates/mod/: mod.py
templates/modcpp/: Makefile  README.txt  mod.cpp  mod.py  runapp.sh
templates/script/: script.py
tests/: test_Executor.py
