[tool.poetry]
name = "opptimizer"
version = "2.3.0"
description = "Optimization of hyperparameters for Machine Learning (AI)"
authors = ["Artur Bąk <virtgen@gmail.com>"]
license = "Apache Software License"
readme = "README.md"
homepage = "https://github.com/virtgen/opptimizer"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
