[tool.poetry]
name = "opptimizer"
version = "2.3.8"
description = "Optimization of hyperparameters for Machine Learning (AI)"
authors = ["Artur Bąk <virtgen@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/virtgen/opptimizer"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5"

[project.urls]
"Documentation" = "https://opptimizer.readthedocs.io/"
"Source" = "https://github.com/virtgen/opptimizer"
"Bug Tracker" = "https://github.com/virtgen/opptimizer/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
